@@ -62,6 +62,9 @@ extern "C" {
 #define memory_allocate_structure( type ) \
 	(type *) memory_allocate( sizeof( type ) )
 
+#define memory_allocate_structure_as_value( type ) \
+	(intptr_t *) memory_allocate( sizeof( type ) )
+
 /* Memory reallocation
  */
 #if defined( HAVE_GLIB_H )
