@@ -86,19 +86,11 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\libbfio\libbfio_error.c"
-				>
-			</File>
-			<File
 				RelativePath="..\..\libbfio\libbfio_error_string.c"
 				>
 			</File>
 			<File
 				RelativePath="..\..\libbfio\libbfio_file.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_file_pool.c"
 				>
 			</File>
 			<File
@@ -136,10 +128,6 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\..\libbfio\libbfio_codepage.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\libbfio\libbfio_definitions.h"
 				>
 			</File>
@@ -157,10 +145,6 @@
 			</File>
 			<File
 				RelativePath="..\..\libbfio\libbfio_file.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_file_pool.h"
 				>
 			</File>
 			<File
