@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="libsystem"
 	ProjectGUID="{A2B861D5-6751-43A9-B085-8D48F8754AC5}"
 	RootNamespace="libsystem"
@@ -39,7 +39,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcstring;..\..\liberror;..\..\libuna;"
+				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcstring;..\..\liberror;..\..\libuna"
 				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBUNA"
 				RuntimeLibrary="2"
 				WarningLevel="4"
@@ -177,6 +177,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\libsystem\libsystem_i18n.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libsystem\libsystem_libuna.h"
 				>
 			</File>
@@ -202,6 +206,10 @@
 			</File>
 			<File
 				RelativePath="..\..\libsystem\libsystem_support.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libsystem\libsystem_unused.h"
 				>
 			</File>
 		</Filter>
